Add initial html elements and style to build off of

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="style.css">
-    <script src="scripts.js"></script>
+    
 </head>
 <body>
-    
+    <div class="game-board">Game Board</div>
+    <div class="menu">Menu</div>
 </body>
+    <script src="scripts.js"></script>
 </html>
