Add functionality to populate game board based on array. Add x and o images

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     
 </head>
 <body>
-    <div class="game-board">Game Board</div>
+    <div class="title">Tic Tac Toe!</div>
+    <div class="game-board"></div>
     <div class="menu">Menu</div>
 </body>
     <script src="scripts.js"></script>
