Add listener for click events on game tiles. Alternate X and O for player turns

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class="title">Tic Tac Toe!</div>
     <div class="game-board"></div>
+    <div class="turn">Player 1's Turn</div>
     <div class="menu">Menu</div>
 </body>
     <script src="scripts.js"></script>
