Add menu buttons

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
     
 </head>
 <body>
-    <div class="title">Tic Tac Toe!</div>
+    <div class="title">Tic. Tac. Toe!</div>
     <div class="game-board"></div>
     <div class="turn">X - Player 1's Turn</div>
-    <div class="menu">Menu</div>
+    <div class="menu">Menu
+        <button class="player1">Player 1's Name</button>
+        <button class="player2">Player 2's Name</button>
+        <button class="reset">Reset</button>
+    </div>
 </body>
     <script src="scripts.js"></script>
 </html>
