Update AI to prevent freezing from infinite loops. Style board

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="menu">
         <!-- <button class="player1">Player 1's Name</button>
         <button class="player2">Player 2's Name</button> -->
-        <button class="reset" onclick="displayController.reset()">Reset</button>
-        <button class="play-ai" onclick="displayController.reset(), playAi.playAiStart()">Play AI</button>
+        <button class="reset" onclick="displayController.reset()">Reset Vs Human</button>
+        <button class="play-ai" onclick="displayController.reset(), playAi.playAiStart()">Play Vs AI</button>
     </div>
 </body>
     <script src="scripts.js"></script>
