Fix AI making moves when a win occurred at 0,4,8

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <button class="player2">Player 2's Name</button> -->
         <button class="reset" onclick="displayController.reset()">Reset Vs Human</button>
         <button class="play-ai" onclick="displayController.reset(), playAi.playAiStart()">Play Vs AI</button>
+        <button class="hard-ai">Play Vs Hard AI</button>
     </div>
 </body>
     <script src="scripts.js"></script>
